<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/NameAlias"
        android:layout_width="255dp"
        android:layout_height="136dp"
        android:fontFamily="casual"
        android:text="@string/nombre_camila_d_az_alias_camiura_murita"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057" />

    <ImageView
        android:id="@+id/photoImg"
        android:layout_width="140dp"
        android:layout_height="138dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/NameAlias"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/divider5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <View
        android:id="@+id/divider2"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginStart="2dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/divider5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96" />

    <View
        android:id="@+id/divider5"
        android:layout_width="375dp"
        android:layout_height="396dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.802" />

    <TextView
        android:id="@+id/txtCareer"
        android:layout_width="382dp"
        android:layout_height="30dp"
        android:fontFamily="casual"
        android:text="@string/analista_programadora"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/divider2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider" />

    <EditText
        android:id="@+id/txtPhone"
        android:layout_width="212dp"
        android:layout_height="61dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="casual"
        android:inputType="phone"
        android:text="@string/celular"
        app:layout_constraintBottom_toBottomOf="@+id/divider5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2"
        app:layout_constraintVertical_bias="0.468"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/txtMail"
        android:layout_width="210dp"
        android:layout_height="58dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="casual"
        android:inputType="textEmailAddress"
        android:text="@string/correo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.714"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="342dp"
        android:layout_height="89dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="casual"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/sobre_ti"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.839"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/txtAge"
        android:layout_width="215dp"
        android:layout_height="60dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="casual"
        android:inputType="number"
        android:text="@string/edad"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.454"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/txtCountry"
        android:layout_width="212dp"
        android:layout_height="55dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="casual"
        android:inputType="text"
        android:text="@string/pais"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.539"
        tools:ignore="LabelFor" />
</androidx.constraintlayout.widget.ConstraintLayout>